--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Style12341/ProyectoBotDiscord#readme",
   "dependencies": {
     "discord.js": "^12.2.0",
-    "eslint": "^7.6.0"
+    "eslint": "^7.6.0",
+    "node-fetch": "^2.6.0"
   }
 }
