--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "eslint": "^7.6.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "request": "2.81.0"
   }
 }
