--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.2.0",
     "eslint": "^7.6.0",
     "node-fetch": "^2.6.0",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "snekfetch": "^4.0.4"
   }
 }
