--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^12.2.0",
     "eslint": "^7.6.0",
     "node-fetch": "^2.6.0",
-    "snekfetch": "^4.0.4"
+    "snekfetch": "^4.0.4",
+    "wolfram-alpha-api": "https://products.wolframalpha.com/api/libraries/javascript/wolfram-alpha-api-1.0.0-rc.1.tgz"
   }
 }
